[gd_scene load_steps=6 format=4 uid="uid://dscgmixmialjs"]

[ext_resource type="Script" path="res://UI/hud.gd" id="1_kpht4"]
[ext_resource type="PackedScene" uid="uid://4dvp5urxnon2" path="res://Tilesheet/Tiles/tile_map.tscn" id="2_3qfb5"]
[ext_resource type="Texture2D" uid="uid://dn4oxvnmb2h87" path="res://Tilesheet/UI/heart-4219.svg" id="2_6fpte"]
[ext_resource type="FontFile" uid="uid://b04lxs7mhgy4k" path="res://Tilesheet/Font/BlackOpsOne-Regular.ttf" id="3_vjmxj"]
[ext_resource type="Texture2D" uid="uid://77s3mo0gt37c" path="res://Tilesheet/PNG/towerDefense_tile287.png" id="4_1inbu"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kpht4")

[node name="TileMap" parent="." instance=ExtResource("2_3qfb5")]
tile_map_data = PackedByteArray("AAAAAAAAAwAEAAUAAAAAAAEAAwAEAAUAAAAAAAIAAwAEAAUAAAAAAAMAAwAEAAUAAAAAAAQAAwAEAAUAAAAAAAUAAwAEAAUAAAAAAAYAAwAEAAUAAAAAAAcAAwAEAAUAAAAAAAgAAwAEAAUAAAAAAAkAAwAEAAUAAAAAAAoAAwAEAAUAAAAAAAsAAwAEAAUAAAABAAsAAwAEAAUAAAABAAoAAwAAAAUAAAACAAoAAwABAAUAAAADAAoAAwABAAUAAAAEAAoAAwABAAUAAAADAAsAAwAEAAUAAAACAAsAAwAEAAUAAAAEAAsAAwAEAAUAAAAFAAsAAwAEAAUAAAAGAAsAAwAEAAUAAAAHAAsAAwAEAAUAAAAIAAsAAwAEAAUAAAAJAAsAAwAEAAUAAAAKAAsAAwAEAAUAAAALAAsAAwAEAAUAAAAMAAsAAwAEAAUAAAANAAsAAwAEAAUAAAAOAAsAAwAEAAUAAAATAAoAAwAEAAUAAAATAAsAAwAEAAUAAAASAAsAAwAEAAUAAAARAAsAAwAEAAUAAAAQAAsAAwAEAAUAAAAPAAsAAwAEAAUAAAATAAkAAwAEAAUAAAATAAgAAwABAAUAAAATAAcAAwAWAAIAAAATAAYAAwABAAMAAAATAAUAAwAEAAUAAAATAAQAAwAEAAUAAAATAAMAAwAEAAUAAAATAAIAAwAEAAUAAAATAAEAAwAEAAUAAAABAAAAAwAEAAUAAAACAAAAAwAEAAUAAAADAAAAAwAAAAQAAAAEAAAAAwAVAAIAAAAFAAAAAwACAAQAAAAGAAAAAwAEAAUAAAAHAAAAAwAEAAUAAAAIAAAAAwAEAAUAAAAJAAAAAwAEAAUAAAAKAAAAAwAEAAUAAAALAAAAAwAEAAUAAAAMAAAAAwAEAAUAAAANAAAAAwAEAAUAAAAOAAAAAwAEAAUAAAAPAAAAAwAEAAUAAAAQAAAAAwAEAAUAAAARAAAAAwAEAAUAAAASAAAAAwAEAAUAAAATAAAAAwAEAAUAAAAFAAoAAwABAAUAAAAGAAoAAwABAAUAAAAHAAoAAwABAAUAAAAIAAoAAwABAAUAAAAJAAoAAwABAAUAAAAKAAoAAwACAAUAAAALAAoAAwAEAAUAAAAMAAoAAwAEAAUAAAANAAoAAwAEAAUAAAAOAAoAAwAEAAUAAAAPAAoAAwAEAAUAAAAQAAoAAwAEAAUAAAARAAoAAwAEAAUAAAASAAoAAwAEAAUAAAADAAEAAwAAAAQAAAADAAIAAwAAAAQAAAADAAMAAwAAAAQAAAADAAQAAwAEAAQAAAADAAUAAwABAAQAAAACAAUAAwABAAQAAAAEAAEAAwABAAQAAAAEAAIAAwABAAQAAAAEAAMAAwABAAQAAAAEAAQAAwABAAQAAAABAAUAAwAAAAQAAAACAAMAAwAEAAUAAAACAAIAAwAEAAUAAAACAAEAAwAEAAUAAAASAAUAAwAEAAUAAAARAAUAAwAEAAUAAAAQAAUAAwAEAAUAAAAPAAUAAwAEAAUAAAAOAAUAAwAEAAUAAAANAAUAAwAEAAUAAAAMAAUAAwAEAAUAAAALAAUAAwAEAAUAAAAKAAUAAwAEAAUAAAAJAAUAAwAEAAUAAAAIAAUAAwAEAAUAAAAHAAUAAwAEAAUAAAAFAAUAAwACAAQAAAAFAAQAAwACAAQAAAAGAAUAAwAEAAUAAAAFAAMAAwACAAQAAAAFAAIAAwACAAQAAAAFAAEAAwACAAQAAAAGAAEAAwAEAAUAAAAGAAIAAwAEAAUAAAAGAAMAAwAEAAUAAAAHAAEAAwAEAAUAAAAIAAEAAwAEAAUAAAAJAAEAAwAEAAUAAAAKAAEAAwAEAAUAAAALAAEAAwAEAAUAAAAMAAEAAwAEAAUAAAANAAEAAwAEAAUAAAAOAAEAAwAEAAUAAAAPAAEAAwAEAAUAAAAQAAEAAwAEAAUAAAASAAEAAwAEAAUAAAASAAIAAwAEAAUAAAARAAIAAwAEAAUAAAARAAEAAwAEAAUAAAAQAAIAAwAEAAUAAAAPAAIAAwAEAAUAAAAPAAMAAwAEAAUAAAAOAAMAAwAEAAUAAAANAAMAAwAEAAUAAAAMAAMAAwAEAAUAAAALAAMAAwAEAAUAAAAKAAMAAwAEAAUAAAAJAAMAAwAEAAUAAAAJAAIAAwAEAAUAAAAIAAIAAwAEAAUAAAAHAAIAAwAEAAUAAAAHAAMAAwAEAAUAAAAKAAIAAwAEAAUAAAALAAIAAwAEAAUAAAAMAAIAAwAEAAUAAAANAAIAAwAEAAUAAAAOAAIAAwAEAAUAAAAIAAMAAwAEAAUAAAAJAAQAAwAEAAUAAAAIAAQAAwAEAAUAAAAHAAQAAwAEAAUAAAAKAAQAAwAEAAUAAAALAAQAAwAEAAUAAAAMAAQAAwAEAAUAAAANAAQAAwAEAAUAAAAOAAQAAwAEAAUAAAAPAAQAAwAEAAUAAAAQAAQAAwAEAAUAAAAQAAMAAwAEAAUAAAASAAMAAwAEAAUAAAASAAQAAwAEAAUAAAARAAMAAwAEAAUAAAARAAQAAwAEAAUAAAABAAQAAwAAAAMAAAABAAMAAwAEAAUAAAABAAIAAwAEAAUAAAABAAEAAwAEAAUAAAACAAQAAwABAAMAAAABAAcAAwAAAAQAAAABAAgAAwAAAAQAAAABAAkAAwAAAAQAAAACAAcAAwABAAQAAAACAAgAAwABAAQAAAACAAkAAwABAAQAAAADAAgAAwADAAQAAAADAAkAAwABAAQAAAAEAAcAAwAEAAUAAAAEAAgAAwABAAMAAAAEAAkAAwABAAQAAAAFAAcAAwAEAAUAAAAFAAgAAwABAAMAAAAFAAkAAwABAAQAAAAGAAcAAwAEAAUAAAAGAAgAAwABAAMAAAAGAAkAAwABAAQAAAAHAAcAAwAEAAUAAAAHAAgAAwABAAMAAAAHAAkAAwABAAQAAAAIAAcAAwAAAAQAAAAIAAgAAwAEAAQAAAAIAAkAAwABAAQAAAAJAAcAAwABAAQAAAAJAAgAAwABAAQAAAAJAAkAAwABAAQAAAAKAAcAAwABAAQAAAAKAAgAAwADAAMAAAAKAAkAAwACAAQAAAALAAcAAwABAAQAAAALAAgAAwABAAUAAAALAAkAAwAEAAUAAAAMAAcAAwABAAQAAAAMAAgAAwABAAUAAAAMAAkAAwAEAAUAAAANAAcAAwABAAQAAAANAAgAAwABAAUAAAANAAkAAwAEAAUAAAAOAAcAAwABAAQAAAAOAAgAAwABAAUAAAAOAAkAAwAEAAUAAAAPAAcAAwABAAQAAAAPAAgAAwABAAUAAAAPAAkAAwAEAAUAAAAQAAcAAwABAAQAAAAQAAgAAwABAAUAAAAQAAkAAwAEAAUAAAARAAcAAwABAAQAAAARAAgAAwABAAUAAAARAAkAAwAEAAUAAAASAAcAAwABAAQAAAASAAgAAwABAAUAAAASAAkAAwAEAAUAAAACAAYAAwABAAQAAAADAAYAAwADAAMAAAAEAAYAAwABAAUAAAABAAYAAwAAAAQAAAAGAAYAAwAEAAUAAAAHAAYAAwAEAAUAAAAFAAYAAwACAAUAAAAIAAYAAwAAAAMAAAAJAAYAAwABAAMAAAAKAAYAAwABAAMAAAALAAYAAwABAAMAAAAMAAYAAwABAAMAAAANAAYAAwABAAMAAAAOAAYAAwABAAMAAAAPAAYAAwABAAMAAAAQAAYAAwABAAMAAAARAAYAAwABAAMAAAASAAYAAwABAAMAAAADAAcAAwACAAQAAAAEAAUAAwABAAQAAAAGAAQAAwAEAAUAAAA=")

[node name="Stats" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 256.0
offset_bottom = 128.0

[node name="HealthPanel" type="Panel" parent="Stats"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 256.0
offset_bottom = 64.0

[node name="HealthSymbol" type="TextureRect" parent="Stats/HealthPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -16.0
offset_right = 48.0
offset_bottom = 16.0
grow_vertical = 2
texture = ExtResource("2_6fpte")
expand_mode = 1

[node name="HealthLabel" type="Label" parent="Stats/HealthPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = 5.0
offset_right = 256.0
offset_bottom = 64.0
theme_override_fonts/font = ExtResource("3_vjmxj")
theme_override_font_sizes/font_size = 35
text = "20
"
vertical_alignment = 1

[node name="MoneyPanel" type="Panel" parent="Stats"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = 64.0
offset_right = 256.0
offset_bottom = 128.0

[node name="MoneySymbol" type="TextureRect" parent="Stats/MoneyPanel"]
layout_mode = 0
offset_left = 10.0
offset_top = -8.5
offset_right = 55.0
offset_bottom = 36.5
texture = ExtResource("4_1inbu")
expand_mode = 1

[node name="MoneyLabel" type="Label" parent="Stats/MoneyPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 64.0
offset_top = -11.0
offset_right = 256.0
offset_bottom = 47.0
theme_override_fonts/font = ExtResource("3_vjmxj")
theme_override_font_sizes/font_size = 35
text = "100
"
vertical_alignment = 1

[node name="Towers" type="Panel" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_left = 1216.0
offset_top = 64.0
offset_right = 1280.0
offset_bottom = 384.0

[node name="TowerContainer" type="VBoxContainer" parent="Towers"]
unique_name_in_owner = true
layout_mode = 0
alignment = 1
